--- a/s/sl/slo/slowtwitch.com.html
+++ b/s/sl/slo/slowtwitch.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the slowtwitch.com privacy policy that was archived on 2013-10-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131026003704id_/http%3A//www.slowtwitch.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the slowtwitch.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215130044id_/http%3A//www.slowtwitch.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <title>&lt;:: Welcome to Slowtwitch.com ::&gt;: Privacy Policy</title>
@@ -92,7 +92,7 @@ sgi_ord=Math.random()*10000000000000000;
 <!--
 document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=46&pid=0&random='+Math.floor(89999999*Math.random()+10000000)+'&millis='+new Date().getTime()+'&referrer='+escape(document.location)+'" language="JavaScript" type="text/javascript"></SCR'+'IPT>');
 //-->
-</script><script src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=46&amp;pid=0&amp;random=32076026&amp;millis=1580378887696&amp;referrer=https%3A//web.archive.org/web/20131026003704id_/http%253A//www.slowtwitch.com/privacy.html" language="JavaScript" type="text/javascript"></script>
+</script><script src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=46&amp;pid=0&amp;random=57832361&amp;millis=1580378889250&amp;referrer=https%3A//web.archive.org/web/20140215130044id_/http%253A//www.slowtwitch.com/privacy.html" language="JavaScript" type="text/javascript"></script>
 <noscript>
 <A href="http://reach.slowtwitch.com/servlet/click/zone?zid=46&pid=0&lookup=true&position=1" target="_top">
 <IMG src="http://reach.slowtwitch.com/servlet/view/banner/image/zone?zid=46&pid=0&position=1" height="90" width="728" hspace="0" vspace="0" border="0" alt="Click Here!">
@@ -158,7 +158,7 @@ document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/
 <!--
 document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=49&pid=0&random='+Math.floor(89999999*Math.random()+10000000)+'&millis='+new Date().getTime()+'&referrer='+escape(document.location)+'" language="JavaScript" type="text/javascript"></SCR'+'IPT>');
 //-->
-</script><script src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=49&amp;pid=0&amp;random=69657659&amp;millis=1580378887734&amp;referrer=https%3A//web.archive.org/web/20131026003704id_/http%253A//www.slowtwitch.com/privacy.html" language="JavaScript" type="text/javascript"></script>
+</script><script src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=49&amp;pid=0&amp;random=38752520&amp;millis=1580378889257&amp;referrer=https%3A//web.archive.org/web/20140215130044id_/http%253A//www.slowtwitch.com/privacy.html" language="JavaScript" type="text/javascript"></script>
 <noscript>
 <A href="http://reach.slowtwitch.com/servlet/click/zone?zid=49&pid=0&lookup=true&position=1" target="_top">
 <IMG src="http://reach.slowtwitch.com/servlet/view/banner/image/zone?zid=49&pid=0&position=1" height="600" width="160" hspace="0" vspace="0" border="0" alt="Click Here!">
@@ -171,9 +171,8 @@ document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/
 <span style="float: left; padding-top: 0px; margin-top: 0px; padding-bottom: 0px; margin-bottom: 0px;"><img src="/images/glinks/our_partners_top_160.png" style="padding-bottom: 0px; margin-bottom: 0px;"></span>
 <ul class="partners">
 <li><a href="http://www.thenew3T.com">3T</a><br></li>
+<li><a href="http://www.aquasphereswim.com/">Aqua Sphere</a><br></li>
 <li><a href="http://www.aquamantri.com">Aquaman</a><br></li>
-<li><a href="http://www.aquasphereswim.com/">Aquasphere</a><br></li>
-<li><a href="http://bontrager.com/products/essentials/triathlon">Bontrager</a><br></li>
 <li><a href="http://www.cannondale.com/">Cannondale</a><br></li>
 <li><a href="http://www.cervelo.com">Cervelo</a><br></li>
 <li><a href="http://cobbcycling.com/">Cobb Cycling</a><br></li>
@@ -186,15 +185,13 @@ document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/
 <li><a href="http://www.gurubikes.com/enUS/main.php">Guru Cycles</a><br></li>
 <li><a href="http://www.gurucycling.com/">GURU Experience</a><br></li>
 <li><a href="http://www.hedcycling.com/">HED Cycling</a><br></li>
-<li><a href="http://hitstriathlonseries.com/">HITS Triathlon</a><br></li>
-<li><a href="http://www.leadmantri.com/">Leadman</a><br></li>
 <li><a href="http://www.lookcycle.com/en/us.html">Look USA</a><br></li>
 <li><a href="http://www.nytro.com/">Nytro Multisport</a><br></li>
 <li><a href="http://www.orbea.com/">Orbea</a><br></li>
 <li><a href="http://www.orca.com/">Orca</a><br></li>
-<li><a href="http://www.pearlizumi.com/">Pearl Izumi</a><br></li>
 <li><a href="http://www.polar.fi/en">Polar Electro</a><br></li>
 <li><a href="http://www.profile-design.com">Profile Design</a><br></li>
+<li><a href="http://www.quintanarootri.com/">Quintana Roo</a><br></li>
 <li><a href="http://www.rev3tri.com/">Rev3tri</a><br></li>
 <li><a href="http://www.rokasports.com">Roka Sports</a><br></li>
 <li><a href="http://www.rolfprima.com/">Rolf Prima</a><br></li>
@@ -203,6 +200,7 @@ document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/
 <li><a href="http://www.specialized.com">Specialized</a><br></li>
 <li><a href="http://speedplay.com/">Speedplay</a><br></li>
 <li><a href="http://www.desotosport.com/products/wetsuits/index.php">T1 Wetsuits</a><br></li>
+<li><a href="http://vasatrainer.com/">Vasa</a><br></li>
 <li><a class="last" href="http://www.visiontechusa.com/">Vision</a><br></li>
 </ul>
 <img src="/images/glinks/mostpopular_bottom_blugry_160.png" style="margin-top: 3px; border: none; vertical-align: bottom;"></div>
@@ -286,7 +284,7 @@ document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/
 <!--
 document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=50&pid=0&random='+Math.floor(89999999*Math.random()+10000000)+'&millis='+new Date().getTime()+'&referrer='+escape(document.location)+'" language="JavaScript" type="text/javascript"></SCR'+'IPT>');
 //-->
-</script><script src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=50&amp;pid=0&amp;random=73478416&amp;millis=1580378887815&amp;referrer=https%3A//web.archive.org/web/20131026003704id_/http%253A//www.slowtwitch.com/privacy.html" language="JavaScript" type="text/javascript"></script>
+</script><script src="http://reach.slowtwitch.com/servlet/view/banner/javascript/zone?zid=50&amp;pid=0&amp;random=92465761&amp;millis=1580378889273&amp;referrer=https%3A//web.archive.org/web/20140215130044id_/http%253A//www.slowtwitch.com/privacy.html" language="JavaScript" type="text/javascript"></script>
 <noscript>
 <A href="http://reach.slowtwitch.com/servlet/click/zone?zid=50&pid=0&lookup=true&position=1" target="_top">
 <IMG src="http://reach.slowtwitch.com/servlet/view/banner/image/zone?zid=50&pid=0&position=1" height="600" width="160" hspace="0" vspace="0" border="0" alt="Click Here!">
@@ -301,11 +299,11 @@ document.write('<SCR'+'IPT src="http://reach.slowtwitch.com/servlet/view/banner/
 <div style="width: 158px; border: 1px solid #000000; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
 <img src="/images/glinks/mostpopular_top_blugry_160.png">
 <p style="padding: 0px 4px 0px 4px; text-align: left;">
-<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=3975&amp;from=popular">1. Ken Glah - 30 straight at Kona</a> <br><br>
-<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=3980&amp;from=popular">2. The Weekend Box Oct 20 2013</a> <br><br>
-<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=3984&amp;from=popular">3. Simon Whitfield moves on</a> <br><br>
-<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=3976&amp;from=popular">4. The power of Kyle Buckingham </a> <br><br>
-<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=3979&amp;from=popular">5. Hayes, Kaye win in Oceanside</a> <br><br>
+<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=4173&amp;from=popular">1. Leon Griffin gets dialed </a> <br><br>
+<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=4176&amp;from=popular">2. The new life of Jonnyo</a> <br><br>
+<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=4174&amp;from=popular">3. The Weekend Box Feb 9 2014</a> <br><br>
+<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=4179&amp;from=popular">4. A chat with The Real Starky</a> <br><br>
+<a href="http://www.slowtwitch.com/cgi-bin/articles/jump.cgi?Detailed=4172&amp;from=popular">5. What We Have Noticed: Canada ....</a> <br><br>
 </p>
 <img src="/images/glinks/mostpopular_bottom_blugry_160.png"></div>
 </div>
@@ -364,12 +362,12 @@ $(function() {
 <!-- BEGIN ADVERTPRO CODE BLOCK -->
 <script type="text/javascript">
 document.write('<scr'+'ipt src="http://reach.slowtwitch.com/servlet/view/wallpaper/javascript/zone?zid=52&pid=0&resolution='+screen.width+'x'+screen.height+'&random='+Math.floor(89999999*Math.random()+10000000)+'&millis='+new Date().getTime()+'&referrer='+encodeURIComponent(document.location)+'" type="text/javascript"></scr'+'ipt>');
-</script><script src="http://reach.slowtwitch.com/servlet/view/wallpaper/javascript/zone?zid=52&amp;pid=0&amp;resolution=800x600&amp;random=74783472&amp;millis=1580378887917&amp;referrer=https%3A%2F%2Fweb.archive.org%2Fweb%2F20131026003704id_%2Fhttp%253A%2F%2Fwww.slowtwitch.com%2Fprivacy.html" type="text/javascript"></script>
+</script><script src="http://reach.slowtwitch.com/servlet/view/wallpaper/javascript/zone?zid=52&amp;pid=0&amp;resolution=800x600&amp;random=32971068&amp;millis=1580378889284&amp;referrer=https%3A%2F%2Fweb.archive.org%2Fweb%2F20140215130044id_%2Fhttp%253A%2F%2Fwww.slowtwitch.com%2Fprivacy.html" type="text/javascript"></script>
 <!-- END ADVERTPRO CODE BLOCK -->
 <!-- BEGIN ADVERTPRO CODE BLOCK -->
 <script type="text/javascript">
 document.write('<scr'+'ipt src="http://reach.slowtwitch.com/servlet/view/pagepeel/javascript/zone?zid=53&pid=0&random='+Math.floor(89999999*Math.random()+10000000)+'&millis='+new Date().getTime()+'&referrer='+encodeURIComponent(document.location)+'" type="text/javascript"></scr'+'ipt>');
-</script><script src="http://reach.slowtwitch.com/servlet/view/pagepeel/javascript/zone?zid=53&amp;pid=0&amp;random=41016915&amp;millis=1580378887921&amp;referrer=https%3A%2F%2Fweb.archive.org%2Fweb%2F20131026003704id_%2Fhttp%253A%2F%2Fwww.slowtwitch.com%2Fprivacy.html" type="text/javascript"></script>
+</script><script src="http://reach.slowtwitch.com/servlet/view/pagepeel/javascript/zone?zid=53&amp;pid=0&amp;random=14301971&amp;millis=1580378889286&amp;referrer=https%3A%2F%2Fweb.archive.org%2Fweb%2F20140215130044id_%2Fhttp%253A%2F%2Fwww.slowtwitch.com%2Fprivacy.html" type="text/javascript"></script>
 <!-- END ADVERTPRO CODE BLOCK -->
 </div>
 
