--- a/h/ho/hou/hours-locations.com.html
+++ b/h/ho/hou/hours-locations.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hours-locations.com privacy policy that was archived on 2013-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225010553id_/http%3A//www.hours-locations.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hours-locations.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215144955id_/http%3A//www.hours-locations.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
@@ -49,7 +49,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 <div id="header">
         <a href="/"><img id="site-logo" src="/images/hours-locations-logo.png" alt="logo for business hours &amp; locations website" height="50"></a>
-            <form action="/search" method="GET" id="search-form">
+         <!-- google_afm -->            <form action="/search" method="GET" id="search-form">
             <input type="text" value="Search Store Hours &amp; Locations" name="q" id="search-store" size="35" class="form">
             <input type="text" value="City, State or Zip" name="where" size="25" class="form" id="search-loc">
             <input type="image" src="/images/search.jpg" height="28" width="54" alt="Search" id="form-button">
@@ -92,7 +92,8 @@
                             })
         </script>
     </div>
-    <!-- google_afm -->
+   
+
     <div id="content">  
         <div id="breadcrumbs">
                 <a href="/">Home</a>        </div>
