--- a/d/di/dis/discountcell.com.html
+++ b/d/di/dis/discountcell.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the discountcell.com privacy policy that was archived on 2013-08-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130817102848id_/http%3A//www.discountcell.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the discountcell.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215150839id_/http%3A//www.discountcell.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <style type="text/css">
@@ -12,7 +12,7 @@ title { color: #3333FF}
 <link rel="shortcut icon" href="http://www.discountcell.com/images/buttons/favicon.ico">
 <meta http-equiv="content-language" content="en">
 <link href="/cellular/styles/jquery-ui-1.8.10.custom.css" rel="Stylesheet" type="text/css">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript" async="" src="//assets.pinterest.com/js/pinit.js"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" src="http://www.discountcell.com/tools/js/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="//assets.pinterest.com/js/pinit.js"></script><script id="twitter-wjs" src="https://platform.twitter.com/widgets.js"></script><script type="text/javascript" src="http://www.discountcell.com/tools/js/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="http://www.discountcell.com/tools/js/jquery-ui-1.8.11.custom.min.js"></script>
 
 <script type="text/javascript">
@@ -328,14 +328,14 @@ window.onload = function(){
 
 <table align="center" style="width: 60%">
 	<tbody><tr>
-		<td style="width: 20%"><div class="fb-like" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false"></div></td>
+		
 		
 		<td style="width: 35%"><a data-pin-do="buttonFollow" href="http://pinterest.com/source/discountcell.com/">Discount Cell</a></td>
 		<td style="width: 10%"><a href="https://twitter.com/share" class="twitter-share-button" data-count="none">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></td>
 		<td style="width: 15%"><div class="g-plus" data-action="share" data-width="120"></div></td>
 		<td style="width: 10%">&nbsp;</td>
-		<td style="width: 20%"><div class="fb-like" data-href="https://www.facebook.com/discountcellinc" data-send="false" data-layout="button_count" data-width="90" data-show-faces="false" data-action="recommend"></div></td>
+		
 		<td id="pinterestbutton" style="width: 10%; display: none;"><a href="//pinterest.com/pin/create/button/" data-pin-do="buttonBookmark"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a></td>
 		<td style="width: 10%"><a href="https://twitter.com/discountcell" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @discountcell</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></td>
@@ -410,9 +410,7 @@ Discountcell is a trademark of Discountcell Inc.<br>
 </p>
 
 <p align="center">
-<a href="https://www.bbb.org/online/consumer/cks.aspx?id=1061117125131937" target="_blank">
-<img alt="BBB Acredited Business" height="84" src="http://www.discountcell.com/cellular/phoneimages2/bbb.gif" width="53" class="style1"></a> 
-&nbsp; <img alt="Certified Woman Owned Business" height="55" src="http://www.discountcell.com/cellular/phoneimages2/wbencsmall.jpg" width="129">&nbsp;&nbsp;
+<img alt="Certified Woman Owned Business" height="55" src="http://www.discountcell.com/cellular/phoneimages2/wbencsmall.jpg" width="129">&nbsp;&nbsp;
 <a name="trustlink" href="https://secure.trust-guard.com/certificates/www.discountcell.com" target="_blank" onclick="var nonwin=navigator.appName!='Microsoft Internet Explorer'?'yes':'no'; window.open(this.href,'welcome','location='+nonwin+',scrollbars=yes,width=517,height='+screen.availHeight+',menubar=no,toolbar=no'); return false;">
 <img name="business-seal" alt="Business Verified Seal" src="http://www.discountcell.com/images/tabs/business.gif" height="40" width="100" border="0"></a>&nbsp;
 
@@ -423,14 +421,6 @@ Discountcell is a trademark of Discountcell Inc.<br>
 <img name="certified-seal" alt="Certified Verified Seal" src="http://www.discountcell.com/images/tabs/certified.gif" height="40" width="100" border="0"></a>&nbsp;
 </p>
 
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
 <script type="text/javascript">
   (function() {
