--- a/v/ve/ver/vertoz.com.html
+++ b/v/ve/ver/vertoz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the vertoz.com privacy policy that was archived on 2013-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131210202254id_/http%3A//vertoz.com/legal/privacy-policy/index.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vertoz.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215153255id_/http%3A//www.vertoz.com/legal/privacy-policy/index.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/template-sub-inner.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -111,7 +111,7 @@
     </div>
 	<div class="space"></div>
     <div class="signup">
-    	<div class="breadcrumb"><script src="../../js/crumb.js" type="text/javascript"></script><div class="mp_backlinks"><a href="/">home</a> &gt; <a href="/web/">web</a> &gt; <a href="/web/20131210202254id_/">20131210202254id </a> &gt; http%3a</div></div>
+    	<div class="breadcrumb"><script src="../../js/crumb.js" type="text/javascript"></script><div class="mp_backlinks"><a href="/">home</a> &gt; <a href="/web/">web</a> &gt; <a href="/web/20140215153255id_/">20140215153255id </a> &gt; http%3a</div></div>
       <div class="sgnbtn"><a href="../../signup/index.html"><img src="../../images/signup-btn.png" width="180" height="50" alt="Sign Up"></a></div>
 	</div>
     <div id="contentareaout">
