--- a/a/ap/apa/apartmentfinder.com.html
+++ b/a/ap/apa/apartmentfinder.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the apartmentfinder.com privacy policy that was archived on 2013-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131216180250id_/http%3A//www.apartmentfinder.com/privacypolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the apartmentfinder.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215174140id_/http%3A//apartmentfinder.com/privacypolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js"><head>
 
@@ -17,16 +17,16 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700" rel="stylesheet" type="text/css">
     
     <!-- CSS -->
-<link href="/Content/css/basebundle?v=LEJaDb93NLTIJyxuI7Q8Bg1WhEAystQJJ6HBl_byWvg1" rel="stylesheet">
+<link href="/Content/css/basebundle?v=jSanMmH4qT-gbjHSfQnXg52H0jeZZ45wSc-UqSFIFN81" rel="stylesheet">
     <!--[if IE 7]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <link href="/Content/css/ie7bundle?v=NvSo0Ix0DTjqV08osk8kd-2dXn4Jv0T5cq1mldwF7bU1" rel="stylesheet"/>
+        <link href="/Content/css/ie7bundle?v=dLWbyUpZKkeCQZZRqg3hZS0_xOWfvqP5gDapAfdeD_41" rel="stylesheet"/>
 
     <![endif]-->
 
     <!--[if IE 8]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <link href="/Content/css/ie8bundle?v=qBSfYhbA9pg5b-dgPVgwTRRu8HcKbmA52MtFwcvsmpM1" rel="stylesheet"/>
+        <link href="/Content/css/ie8bundle?v=i9sllWMD6VrtPWXOt1nxSSgUXzx7d0tyoc41ogDQtwM1" rel="stylesheet"/>
 
     <![endif]-->
 
@@ -96,19 +96,25 @@
     <div class="error" style="display:none;">
         <label id="errMsg"></label>
     </div>
-</form><div class="helper" style="display:none;">
+</form> <!-- <div class="helper" style="display:none;">
     	<label id="helper">Also search by Student, Senior, Short-Term or Military.</label>
-    </div>
+    </div> -->
 
 
             </div>
         </div>
 		<nav class="primary">
-			<ul class="fl">
+			<ul class="fl" id="hovermenu">
 				<li><a href="/">Home</a></li>
 				<li><a href="http://theapartmentfinderblog.com/" target="_blank">Blog</a></li>
 				<li><a href="/mobile">Mobile</a></li>
-                <li><a class="advertiser" href="http://afresults.com" target="_blank">Advertiser Sign In</a></li>
+                <li class="advertiser">Advertiser Sign In
+ <ul>
+        <li><a href="http://ams.apartmentfinder.com/" target="_blank">AMS</a></li>
+        <li><a href="http://www.afresults.com" target="_blank">AF Results</a></li>
+           
+      </ul>
+                </li>
 			</ul>
 		</nav>
 	</header><!-- END: header -->
@@ -399,7 +405,7 @@
             <li><strong>Corporate Information:</strong> <a href="/aboutus.aspx">About Us</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="/ContactUs">Contact Us</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="/termsofuse.aspx">Terms of Use</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="/privacypolicy.aspx">Privacy Policy</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="/sitemap.aspx">Sitemap</a></li>
             <li><strong>Network of Sites:</strong> <a href="/">Apartment Finder</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="http://www.uniquehomes.com/" target="_blank">Unique Homes</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="http://www.nci.com/products/homedesign.html" target="_blank">Home Design</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="http://www.homeimprovementmag.com/" target="_blank">Home Improvement</a>  &nbsp;&nbsp;|&nbsp;&nbsp;  <a href="http://www.nci.com/products/relocating.html">Relocating</a></li>
             <li class="mt20"><span class="sm-txt">Information deemed reliable but not guaranteed. All measurements are approximate. <img alt="Equal Housing Opportunity" width="14" height="10" src="/content/images/eho_logo_dark_grey.png"><span></span> Equal Housing Opportunity. Copyright (c) Network Communications, Inc. All rights reserved.</span></li>
-            <li><strong>Build : 1.21.4.c</strong></li>
+            <li><strong>Build : 1.23.26.b</strong></li>
 
         </ul>
 
@@ -432,8 +438,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js" type="text/javascript"></script>
    
-    <script src="/bundles/jqueryplugins?v=QnaG528uWP55gI2ElApFyqL28dH6EZXT5_uTYmDMvfQ1"></script>
-<script src="/bundles/livingChoices?v=E9zMrxUxcYf1edo0YDhfH8AMw4hg73IqGrw8nKo3vnk1"></script>
+    <script src="/bundles/jqueryplugins?v=ZYk6YcLi2hzzibjlLR0W9aoHOT4S6JSDqLitdWXIOkw1"></script>
+<script src="/bundles/livingChoices?v=AoVQs5T825sTRD4zekU_qx0r8byxa2e_J3ZIVAoI3Vc1"></script>
 
 
     <script type="text/javascript">
