--- a/t/tr/tru/trumaker.com.html
+++ b/t/tr/tru/trumaker.com.html
@@ -1,59 +1,61 @@
-<!--The following is the downloaded HTML source of the trumaker.com privacy policy that was archived on 2013-08-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130806233623id_/https%3A//www.trumaker.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the trumaker.com privacy policy that was archived on 2014-02-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140215203344id_/https%3A//www.trumaker.com/privacy_policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en" style="" class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
+<!DOCTYPE html><html lang="en"><head>
 <meta charset="utf-8">
-<meta content="IE=Edge,chrome=1" http-equiv="X-UA-Compatible">
 <meta content="width=device-width initial-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
+<meta content="IE=Edge,chrome=1" http-equiv="X-UA-Compatible">
 <meta content="yes" name="apple-mobile-web-app-capable">
-<title>Trumaker</title>
-<meta content="authenticity_token" name="csrf-param">
-<meta content="KVT9qysOuC7Eyl8VOdPq8yl3NQtgrrFfgZ8rAXMoXwU=" name="csrf-token">
-<link href="/assets/public-7a69333fae8475dc117dc8dfa932a380.css" media="all" rel="stylesheet" type="text/css">
-<!-- For third-generation iPad with high-resolution Retina display: -->
-<!-- Size should be 144 x 144 pixels -->
-<link href="/assets/dashboard/apple-touch-icon-144x144-precomposed-79839c124ec6685b04f1226cbde5e78b.png" rel="apple-touch-icon-precomposed" sizes="144x144" type="image/png">
-<!-- For iPhone with high-resolution Retina display: -->
-<!-- Size should be 114 x 114 pixels -->
-<link href="/assets/dashboard/apple-touch-icon-114x114-precomposed-d33c89743c3d40d4c58505bb60bf655d.png" rel="apple-touch-icon-precomposed" sizes="114x114" type="image/png">
-<!-- For first- and second-generation iPad: -->
-<!-- Size should be 72 x 72 pixels -->
-<link href="/assets/dashboard/apple-touch-icon-72x72-precomposed-48003021f0243d95ff0ab71b731d3439.png" rel="apple-touch-icon-precomposed" sizes="72x72" type="image/png">
-<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-<!-- Size should be 57 x 57 pixels -->
-<link href="/assets/dashboard/apple-touch-icon-precomposed-e60bb00d81a5878859dc88bd20cf96cb.png" rel="apple-touch-icon-precomposed" type="image/png">
-<!-- For all other devices -->
-<!-- Size should be 32 x 32 pixels -->
-<link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
-
-<script type="text/javascript" async="" src="https://d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/iyg2gc3ldh/analytics.min.js"></script><script src="//use.typekit.net/pvp4rus.js" type="text/javascript"></script>
-<script>
-  try{Typekit.load();}catch(e){}
-</script>
-<script src="/assets/modernizr-2.6.2.min.js"></script>
+<meta content="pk_OV9rQDdEd5xZPeRXQUd2RQZjj0xAC" name="stripe-key">
+<meta content="t6KquViK1cKVk5VSfSfzCcaNQtT6ExQH4hJHtCPPbJU" name="google-site-verification">
+<meta content="Get custom dress shirts and custom casual shirts that are built to fit you, not the masses. Designed for doing." name="description">
+<meta content="Trumaker, mens shirts, made to measure, dress shirts, custom shirts, tailored shirts" name="keywords">
+<link href="//trumaker-production.s3.amazonaws.com/apple-touch-icon-144x144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144" type="image/png">
+<link href="//trumaker-production.s3.amazonaws.com/apple-touch-icon-114x114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114" type="image/png">
+<link href="//trumaker-production.s3.amazonaws.com/apple-touch-icon-72x72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72" type="image/png">
+<link href="//trumaker-production.s3.amazonaws.com/apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed" type="image/png">
+<link href="//trumaker-production.s3.amazonaws.com/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
 <!--[if lt IE 9]>
 <script src='http://html5shiv.googlecode.com/svn/trunk/html5.js'></script>
 <![endif]-->
-<script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script></head>
+
+<title>Trumaker Privacy Policy - Buy built-to-fit clothing for men.</title>
+<meta content="authenticity_token" name="csrf-param">
+<meta content="cy+PO+fdmP5rZOfnvWYsO9WzBqJBG1w5VOBWzgig8WY=" name="csrf-token">
+<link href="//trumaker-production.s3.amazonaws.com/assets/public-da10be46a82ab6dab24ae87891c55472.css" media="all" rel="stylesheet" type="text/css">
+<script type="text/javascript" async="" src="https://d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/iyg2gc3ldh/analytics.min.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script></head>
 <body>
-<header>
-<div class="holder clearfix">
+ 
+<header class="hidden-sm">
+<div class="holder">
 <strong class="logo"><a href="/">Trumaker</a></strong>
 <nav>
 <ul class="add-nav">
-<li></li>
-<li><a href="/login">SIGN IN</a></li>
-<li></li>
+<li><a href="https://shopping.trumaker.com">SIGN IN</a></li>
 </ul>
 </nav>
 <nav>
 <ul>
+<li><a href="https://shopping.trumaker.com">Shop</a></li>
 <li><a href="/about">ABOUT</a></li>
 <li><a href="http://trumaker.tumblr.com" target="_blank">JOURNAL</a></li>
 </ul>
 <div class="clear"></div>
 </nav>
 </div>
+</header>
+<header class="hidden-lg">
+<div class="holder">
+<strong class="logo"><a href="/">Trumaker</a></strong>
+</div>
+<nav>
+<ul>
+<li><a href="https://shopping.trumaker.com">Shop</a></li>
+<li><a href="/about">ABOUT</a></li>
+<li><a href="http://trumaker.tumblr.com" target="_blank">JOURNAL</a></li>
+<li><a href="https://shopping.trumaker.com">SIGN IN</a></li>
+</ul>
+</nav>
 </header>
 
 
@@ -93,10 +95,13 @@
 		<h1><a href="/">Trumaker</a></h1>
 		<nav class="footer">
 			<ul>
-				<li><a href="/contact">Contact</a></li>
-				<li><a href="/faq">FAQs</a></li>
-				<li><a href="/become_an_outfitter">Become an Outfitter</a></li>
+				<li><a href="/support">Contact</a></li>
+				<li><a href="/press">Press</a></li>
+				<li><a href="/careers">Careers</a></li>
+				<li><a href="/faqs">FAQs</a></li>
 				<li><a href="/privacy_policy">Privacy Policy</a></li>
+				<li><a href="/purchase_gift">Gift Cards</a></li>
+				<li><a href="/become_an_outfitter">Become an Outfitter</a></li>
 			</ul>
 			<div class="clear"></div>
 		</nav>
@@ -117,16 +122,20 @@
 
 
 <div class="javascript">
-<div class="libs"><script src="/assets/public-88f5d833b99d8071fba9bfc22816aa3f.js" type="text/javascript"></script></div>
+<div class="libs"><script src="//trumaker-production.s3.amazonaws.com/assets/public-1567fef9be33b3f3e5a7746fd35b764f.js" type="text/javascript"></script></div>
 <div class="page">
 <script>
-  var analytics=analytics||[];analytics.load=function(e){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+e+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);var r=function(e){return function(){analytics.push([e].concat(Array.prototype.slice.call(arguments,0)))}},i=["identify","track","trackLink","trackForm","trackClick","trackSubmit","pageview","ab","alias","ready"];for(var s=0;s<i.length;s++)analytics[i[s]]=r(i[s])};
-  analytics.load("iyg2gc3ldh");
+  window.analytics||(window.analytics=[]),window.analytics.methods=["identify","track","trackLink","trackForm","trackClick","trackSubmit","page","pageview","ab","alias","ready","group","on","once","off"],window.analytics.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),window.analytics.push(a),window.analytics}};for(var i=0;i<window.analytics.methods.length;i++){var method=window.analytics.methods[i];window.analytics[method]=window.analytics.factory(method)}window.analytics.load=function(t){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+t+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n)},window.analytics.SNIPPET_VERSION="2.0.8";
+  
+  window.analytics.load("iyg2gc3ldh");
 </script>
 <script>
+  window.analytics.page();
   
-    analytics.track('Privacy', { test_prop : 'coming soon' });
+    analytics.track('public privacy', { referrer : "" });
 </script>
+
+
 
 </div>
 </div>
@@ -141,6 +150,6 @@ if(NREUMQ.a)NREUMQ.a();
 };
 NREUMQ.a=window.onload;window.onload=NREUMQ.f;
 };
-NREUMQ.push(["nrfj","beacon-3.newrelic.com","6beeb9b5f1","1674996","Jl9aQEReVApVFksVCxFVG1xZXF1JQBYNEAMGSQ==",14,102,new Date().getTime(),"","","","",""]);</script>
+NREUMQ.push(["nrfj","beacon-5.newrelic.com","6beeb9b5f1","1674996","Jl9aQEReVApVFksVCxFVG1xZXF1JQBYNEAMGSQ==",19,25,new Date().getTime(),"","","","",""]);</script>
 
 <script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
